--- a/backend/src/config/config.json
+++ b/backend/src/config/config.json
@@ -9,7 +9,8 @@
     "query": {
       "raw": true
     },
-    "freezeTableName": true
+    "freezeTableName": true,
+    "logging": false
   },
   "test": {
     "username": "root",
