--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "5.1.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "5.1.3",
+    "lodash": "4.17.21",
     "node-sass": "6.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
