--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "node-sass": "6.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-paginate": "8.1.0",
     "react-router-dom": "5.3.4",
     "react-scripts": "5.0.1",
     "react-toastify": "8.1.0",
