--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "lodash": "4.17.21",
     "node-sass": "6.0.0",
     "react": "^18.3.1",
+    "react-bootstrap": "2.1.1",
     "react-dom": "^18.3.1",
     "react-paginate": "8.1.0",
     "react-router-dom": "5.3.4",
