--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,12 @@
     "bcrypt": "5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "1.4.6",
     "cors": "^2.8.5",
     "dotenv": "16.4.5",
     "ejs": "3.1.10",
     "express": "^4.19.2",
+    "jsonwebtoken": "8.5.1",
     "lodash": "^4.17.21",
     "mysql2": "3.11.0",
     "nodemailer": "6.6.3",
