--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "2.1.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "5.1.0",
     "react-paginate": "8.1.0",
     "react-router-dom": "5.3.4",
     "react-scripts": "5.0.1",
